# annot

./: CHANGELOG.md  CLAUDE.md  README.md  flake.nix  package.json  pnpm-lock.yaml  release-please-config.json  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  rc-release.yml  release.yml
docs/: features.md
src/: app.d.ts  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  diff.rs  excalidraw_window.rs  files.rs  highlight.rs  id.rs  input.rs  lib.rs  main.rs  markdown.rs  mermaid_window.rs  portal.rs  review.rs  state.rs  terraform.rs  window_state.rs
src-tauri/src/mcp/: mod.rs  tools.rs
src-tauri/src/output/: builder.rs  formatters.rs  mod.rs  render.rs  snapshot_tests.rs
src-tauri/src/output/snapshots/: annot_lib__output__snapshot_tests__kitchen_sink_everything.snap  annot_lib__output__snapshot_tests__kitchen_sink_everything.snap.new
src/lib/: AnnotationEditor.svelte  CopyDropdown.svelte  HelpOverlay.svelte  keys.ts  tiptap.test.ts  tiptap.ts  types.ts
src/lib/CommandPalette/: CommandPalette.svelte  Icon.svelte
src/lib/components/: AnnotationSlot.svelte  Header.svelte  SessionEditor.svelte  StatusBar.svelte  TerraformPalette.svelte  WindowResizeHandles.svelte  index.ts
src/lib/composables/: useAnnotationEditor.svelte.ts  useAnnotationEditor.test.ts  useAnnotations.svelte.ts  useAnnotations.test.ts  useBookmarks.svelte.ts  useHistory.svelte.ts  useHistory.test.ts  useInteraction.svelte.ts  useKeyboard.svelte.ts  (+1 more)
src/routes/: +page.svelte  page.test.ts
src/styles/: base.css  index.css  tokens.css
test-fixtures/: sample.md
(+30 files in other folders)
