[package]
name = "annot"
version = "0.12.1" # x-release-please-version
description = "Human-in-the-loop annotation tool for AI workflows"
authors = ["Denys Oliekhov"]
license = "AGPL-3.0"
edition = "2021"
repository = "https://github.com/denolehov/annot"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "annot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
syntect = "5"

[dependencies]
arboard = "3"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
syntect = "5"
thiserror = "2"
dirs = "6"
fs4 = "1.1"
rand = "0.10"
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
tokio = { version = "1.48.0", features = ["full"] }
schemars = { version = "1.1.0", features = ["derive"] }
unidiff = "0.4"
pulldown-cmark = "0.13"
unicode-width = "0.2"
base64 = "0.22.1"
sha2 = "0.11.0"
hex = "0.4.3"
urlencoding = "2.1.3"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
regex = "1.12.2"
languages = "0.0.2"
htmlescape = "0.3.1"
chrono = { version = "0.4.45", features = ["serde"] }
indexmap = "2.12.1"
ignore = "0.4"
sublime_fuzzy = "0.7"
similar = { version = "3", features = ["inline"] }

[dev-dependencies]
insta = "1.45"
tempfile = "3.23.0"

